5v - AutoMapper instalado e configurado no projeto

--- a/ProjetoModeloDDDv/ProjetoModeloDDDv.MVC/ProjetoModeloDDDv.MVC.csproj
+++ b/ProjetoModeloDDDv/ProjetoModeloDDDv.MVC/ProjetoModeloDDDv.MVC.csproj
@@ -45,6 +45,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=4.2.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.4.2.1\lib\net45\AutoMapper.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -120,6 +123,9 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="AutoMapper\AutoMapperConfig.cs" />
+    <Compile Include="AutoMapper\DomainToViewModelMappingProfile.cs" />
+    <Compile Include="AutoMapper\ViewModelToDomainMappingProfile.cs" />
     <Compile Include="Controllers\ClientesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
@@ -165,10 +171,11 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Clientes\Index.cshtml" />
+    <Content Include="Views\Clientes\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Clientes\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -189,7 +196,7 @@
       <Name>ProjetoModeloDDDv.Domain</Name>
     </ProjectReference>
     <ProjectReference Include="..\ProjetoModeloDDDv.Infra.Data\ProjetoModeloDDDv.Infra.Data.csproj">
-      <Project>{0bf70bed-9faa-466e-8b98-448b7bf28d28}</Project>
+      <Project>{0BF70BED-9FAA-466E-8B98-448B7BF28D28}</Project>
       <Name>ProjetoModeloDDDv.Infra.Data</Name>
     </ProjectReference>
   </ItemGroup>
