--- a/ProjetoModeloDDDv/ProjetoModeloDDDv.Application/ProjetoModeloDDDv.Application.csproj
+++ b/ProjetoModeloDDDv/ProjetoModeloDDDv.Application/ProjetoModeloDDDv.Application.csproj
@@ -41,7 +41,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppServiceBase.cs" />
+    <Compile Include="ClienteAppService.cs" />
+    <Compile Include="Interface\IAppServiceBase.cs" />
+    <Compile Include="Interface\IClienteAppService.cs" />
+    <Compile Include="Interface\IProdutoAppService.cs" />
+    <Compile Include="ProdutoAppService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ProjetoModeloDDDv.Domain\ProjetoModeloDDDv.Domain.csproj">
+      <Project>{fb0e0027-3f1d-48a2-aee1-1e7f190d56f4}</Project>
+      <Name>ProjetoModeloDDDv.Domain</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
